@@ -1,124 +1,78 @@
 require File.dirname(__FILE__) + '/../../spec_helper.rb'
 
-describe "c" do
-
-  it "1" do
-  end
-
-  it "2" do
-  end
-
-end
-
-describe "d" do
-
-  it "3" do
-  end
-
-  it "4" do
-  end
-
-end
-
-class SpecParserSubject
-end
-
-describe SpecParserSubject do
-  
-  it "5" do
-  end
-  
-end
-
-describe SpecParserSubject, "described" do
-  
-  it "6" do
-  end
-  
-end
-
-describe SpecParserSubject, "described", :something => :something_else do
-   
-   it "7" do
-   end
-
-end
-
-describe "described", :something => :something_else do
-  
-  it "8" do
-  end
-  
-end
-   
-
 describe "SpecParser" do
+  attr_reader :parser, :file
   before(:each) do
-    @p = Spec::Runner::SpecParser.new
+    @parser = Spec::Runner::SpecParser.new
+    @file = "#{File.dirname(__FILE__)}/spec_parser_fixture.rb"
   end
 
   it "should find spec name for 'specify' at same line" do
-    @p.spec_name_for(File.open(__FILE__), 5).should == "c 1"
+    parser.spec_name_for(file, 5).should == "c 1"
   end
 
   it "should find spec name for 'specify' at end of spec line" do
-    @p.spec_name_for(File.open(__FILE__), 6).should == "c 1"
+    parser.spec_name_for(file, 6).should == "c 1"
   end
 
   it "should find context for 'context' above all specs" do
-    @p.spec_name_for(File.open(__FILE__), 4).should == "c"
+    parser.spec_name_for(file, 4).should == "c"
   end
 
   it "should find spec name for 'it' at same line" do
-    @p.spec_name_for(File.open(__FILE__), 15).should == "d 3"
+    parser.spec_name_for(file, 15).should == "d 3"
   end
 
   it "should find spec name for 'it' at end of spec line" do
-    @p.spec_name_for(File.open(__FILE__), 16).should == "d 3"
+    parser.spec_name_for(file, 16).should == "d 3"
   end
 
   it "should find context for 'describe' above all specs" do
-    @p.spec_name_for(File.open(__FILE__), 14).should == "d"
+    parser.spec_name_for(file, 14).should == "d"
   end
 
  it "should find nearest example name between examples" do
-   @p.spec_name_for(File.open(__FILE__), 7).should == "c 1"
+   parser.spec_name_for(file, 7).should == "c 1"
  end
 
   it "should find nothing outside a context" do
-    @p.spec_name_for(File.open(__FILE__), 2).should be_nil
+    parser.spec_name_for(file, 2).should be_nil
   end
-  
+
   it "should find context name for type" do
-    @p.spec_name_for(File.open(__FILE__), 26).should == "SpecParserSubject"
+    parser.spec_name_for(file, 26).should == "SpecParserSubject"
   end
-  
+
   it "should find context and spec name for type" do
-    @p.spec_name_for(File.open(__FILE__), 28).should == "SpecParserSubject 5"
+    parser.spec_name_for(file, 28).should == "SpecParserSubject 5"
   end
 
   it "should find context and description for type" do
-    @p.spec_name_for(File.open(__FILE__), 33).should == "SpecParserSubject described"
+    parser.spec_name_for(file, 33).should == "SpecParserSubject described"
   end
-  
+
   it "should find context and description and example for type" do
-    @p.spec_name_for(File.open(__FILE__), 36).should == "SpecParserSubject described 6"
+    parser.spec_name_for(file, 36).should == "SpecParserSubject described 6"
   end
 
   it "should find context and description for type with modifications" do
-    @p.spec_name_for(File.open(__FILE__), 40).should == "SpecParserSubject described"
+    parser.spec_name_for(file, 40).should == "SpecParserSubject described"
   end
-  
+
   it "should find context and described and example for type with modifications" do
-    @p.spec_name_for(File.open(__FILE__), 43).should == "SpecParserSubject described 7"
+    parser.spec_name_for(file, 43).should == "SpecParserSubject described 7"
   end
-  
+
   it "should find example group" do
-    @p.spec_name_for(File.open(__FILE__), 47).should == "described"
+    parser.spec_name_for(file, 47).should == "described"
   end
-  
+
   it "should find example" do
-    @p.spec_name_for(File.open(__FILE__), 50).should == "described 8"
+    parser.spec_name_for(file, 50).should == "described 8"
   end
-  
+
+  it "should find nested example" do
+    parser.spec_name_for(file, 63).should == "e f 11"
+  end
+
 end
